--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
 
 * {
   box-sizing: border-box;
@@ -135,4 +136,14 @@ nav ul li + li + li {
 .content p {
   color: #333;
   line-height: 1.5;
+}
+
+.normal-item {
+  color: pink;
+}
+
+.selected-item {
+  color: aquamarine;
+  font-weight: bold;
+  font-family: Poppins;
 }
