--- a/projects/Project5/style.css
+++ b/projects/Project5/style.css
@@ -30,3 +30,12 @@ body {
   font-size: 50px;
   color: #fff;
 }
+
+.for-projects i {
+  padding-right: 5px;
+  padding-bottom: 5px;
+}
+
+ul {
+  list-style-type: none;
+}
