--- a/projects/Project1/style.css
+++ b/projects/Project1/style.css
@@ -62,3 +62,12 @@ body {
     display: none;
   }
 }
+
+.for-projects i {
+  padding-right: 5px;
+  padding-bottom: 5px;
+}
+
+ul {
+  list-style-type: none;
+}
