--- a/projects/Project3/style.css
+++ b/projects/Project3/style.css
@@ -132,3 +132,12 @@ nav ul li + li + li {
   color: #333;
   line-height: 1.5;
 }
+
+.for-projects i {
+  padding-right: 5px;
+  padding-bottom: 5px;
+}
+
+ul {
+  list-style-type: none;
+}
