--- a/projects/Project4/style.css
+++ b/projects/Project4/style.css
@@ -55,3 +55,12 @@ body {
 .search.active .btn {
   transform: translateX(198px);
 }
+
+.for-projects i {
+  padding-right: 5px;
+  padding-bottom: 5px;
+}
+
+ul {
+  list-style-type: none;
+}
