--- a/projects/Project7/style.css
+++ b/projects/Project7/style.css
@@ -137,3 +137,12 @@ h1 {
     width: 12rem;
   }
 }
+
+.for-projects i {
+  padding-right: 5px;
+  padding-bottom: 5px;
+}
+
+ul {
+  list-style-type: none;
+}
