--- a/projects/Project8/style.css
+++ b/projects/Project8/style.css
@@ -99,3 +99,12 @@ body {
   color: lightblue;
   transform: translateY(-30px);
 }
+
+.for-projects i {
+  padding-right: 5px;
+  padding-bottom: 5px;
+}
+
+ul {
+  list-style-type: none;
+}
