--- a/projects/Project9/style.css
+++ b/projects/Project9/style.css
@@ -36,3 +36,12 @@ body {
 .btn:focus {
   outline: none;
 }
+
+.for-projects i {
+  padding-right: 5px;
+  padding-bottom: 5px;
+}
+
+ul {
+  list-style-type: none;
+}
