--- a/MyResume/assets/css/style.css
+++ b/MyResume/assets/css/style.css
@@ -351,6 +351,10 @@ section {
   margin-bottom: 0;
 }
 
+.subject h2{
+  padding-top: 30px;
+}
+
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
