--- a/MyResume/assets/css/style.css
+++ b/MyResume/assets/css/style.css
@@ -1111,7 +1111,7 @@ section {
   padding: 0;
   margin: 0 0 15px 0;
 }
-#footer p {
+#footer i {
   font-size: 15;
   font-style: italic;
   padding: 0;
