--- a/MyResume/assets/css/style.css
+++ b/MyResume/assets/css/style.css
@@ -240,15 +240,15 @@ h1, h2, h3, h4, h5, h6 {
 # Hero Section
 --------------------------------------------------------------*/
 #hero {
-  width: 50%;
+  width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top right no-repeat;
+  background: url("../img/3.jpg") top right no-repeat;
   background-size: cover; 
   position: relative;
 }
 @media (min-width: 992px) {
   #hero {
-    padding-left: 160px;
+    padding-left: 100px;
   }
 }
 #hero:before {
