hampton and mensa logos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -391,6 +391,9 @@ section {
 /*--------------------------------------------------------------
 # Facts
 --------------------------------------------------------------*/
+.sig{
+  color: #011444;
+}
 .facts .count-box {
   padding: 30px 30px 25px 30px;
   margin-top: 30px;
